# unofficial-vanuatu-weather-api

./: .gitignore  Dockerfile  NOTES.md  README.md  TODO.md  boussole.json  docker-compose.development.yml  docker-compose.production.yml  main.py  manage.py  pyproject.toml  run_scraper.py  run_scraper_schedule.py
alembic/: env.py
alembic/versions/: 04b1040f228b_page.py  47a15be44405_session.py  5e58e9557435_location.py  5f9d37ddc778_page.py  6240b762f4f3_page.py  702354718c7b_add_location_slug.py  8240f84252c3_forecastdaily.py  86ec5d272f00_page.py  aedf4cbbc1ef_weatherwarning.py  af45f0f591da_page_session_forecastdaily.py  b12db961fd0c_session_page_forecastdaily.py  b1e355665955_page.py  cc000e260cd1_warnings.py  da2a6dd3b182_forecastmedia_image.py
app/: _vmgd.py  config.py  forecast_media.py  forecasts.py  locations.py  main.py  models.py  pages.py  schemas.py  scraper_sessions.py  templates.py  vmgd.py  warnings_.py  weather_warnings.py  weathers.json
app/api/: endpoints.py  exception_handler.py  locations.py  main.py  responses.py  scraper_sessions.py  templates.py  utils.py
app/api/templates/: layout.html
app/scraper/: aggregators.py  entities.py  exceptions.py  main.py  mappings.py  pages.py  schemas.py  scrapers.py  sessions.py  utils.py
app/scss/: main.scss
app/static/css/: main.css
app/templates/: error.html  index.html  layout.html  navbar.html
app/utils/: api.py  datetime.py  slugify.py
app/vmgd/: aggregators.py  entities.py  exceptions.py  mappings.py  schemas.py  scrape_pages.py  scrapers.py  utils.py
data/: .env.template  .gitignore
tests/: conftest.py  factories.py  test_api.py  test_scraper_utils.py  test_weather_warnings.py
tests/html_examples/: forecast-division-20240606.html  forecast-division-20240606.html.txt
