[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = ""
authors = ["Michael Toohig <michael.toohig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
SQLAlchemy = {version = "^2.0.7", extras = ["asyncio"]}
pydantic = "1.10.7"
aiosqlite = "^0.18.0"
Jinja2 = "^3.1.2"
loguru = "^0.6.0"
asgiref = "^3.6.0"
boussole = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
